<resources>
    <string name="app_name">Splash</string>
    <string name="action_settings">Settings</string>
    <string name="wait">Please wait…</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_news_feed">News Feed</string>
    <string name="error_credentials">Invalid login or password!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="errEmpty">Field left blank!</string>


    <!-- Strings related to Settings -->
    <string name="strLanguage">Language</string>
    <string-array name="lang_list" translatable="false">
        <item>English</item>
        <item>हिंदी</item>
    </string-array>
    <string-array name="lang_list_values" translatable="false">
        <item>en</item>
        <item>hi</item>
    </string-array>

    <string name="strSource">Sources</string>
    <string name="strRemember">Remember me</string>
    <string name="strRememberSummary">Remember the account you login with</string>
    <string name="strAutolog">Auto Logon</string>
    <string name="strAutologSummary">Login automatically with last account</string>
    <string name="restartNotify">Restart is needed to change the language</string>
    <string name="pref_general">General</string>
    <string name="title_activity_register">Register</string>
    <string name="regUser">Username</string>
    <string name="regEmail">Email</string>
    <string name="regPassword">Password</string>
    <string name="regButton">Register</string>
    <string name="errInvalidEmail">Invalid email address!</string>
    <string name="errShortPass">Password should be at least 8 characters</string>
    <string name="errNameUsed">Username not available!</string>
    <string name="errNoAccess">Please, enable internet access!</string>
    <string name="errConFailed">Connection failed!</string>
    <string name="errUnknown">Unknown error has occurred!</string>
    <string name="warnRegBusy">Already working on it…</string>
    <string name="errEmailUsed">Email Address already registered!</string>
    <string name="errUsername">Username invalid!</string>
    <string name="errEmail">Email invalid!</string>
    <string name="errPassword">Password invalid!</string>
    <string name="errRequest">Request method not supported!</string>
    <string name="errServer">Server error!</string>
    <string name="errNoLoginServer">No login server available</string>
    <string name="errInvalidCreds">Wrong username or password</string>
    <string name="errPartialData">Server received incomplete data</string>
    <string name="tipProfpic">Profile Icon</string>

    <string name="txtFName">First Name</string>
    <string name="txtLName">Last Name</string>
    <string name="txtSave">Save</string>
    <string name="title_activity_sources_manager">Manage Forum Sources</string>
    <string name="warnConfigServer">No servers configured! Taking you to server configuration…</string>
    <string name="strEnterUrl">Enter URL..</string>
    <string name="strSave">Save</string>
    <string name="defaultIdentity">Default Identity</string>
    <string name="defaultUser">Default Username</string>
    <string name="strDefUserSummary">Default username when logging in/registering</string>
    <string name="defaultFname">Default First Name</string>
    <string name="defaultLname">Default Last Name</string>
    <string name="defaultEmail">Default Email</string>
    <string name="descDeleteServer">Delete Server</string>
    <string name="strNoResponse"> is not responding. Disabling…</string>
    <string name="strFilterSource">Filter by Sources</string>
    <string name="strCloseSources">Return to threads view</string>
    <string name="strAskLogin">Do you want to login now?</string>
    <string name="title_activity_view_thread" translatable="false">ViewThreadActivity</string>
    <string name="strSrcExists">A source with the same name already exists!</string>
    <string name="strSourcesSummary">Manage forum sites</string>
    <string name="strDefFnameSummary">First name to be used as default for new registration</string>
    <string name="strDefLnameSummary">Last name to be used as default for new registration</string>
    <string name="strDefEmailSummary">Use this email to autofill email field</string>
    <string name="strSubmit">Save</string>
    <string name="strAnddownLicense" translatable="false"><a href="https://github.com/commonsguy/cwac-anddown">CWAC AndDown</a> <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a></string>
    <string name="strHtmltvLicense" translatable="false"><a href="https://github.com/SufficientlySecure/html-textview">HtmlTextView</a> <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a></string>
    <string name="strOSL" translatable="false">Open Source Licenses</string>
    <string name="strMITLicense" translatable="false"><a href="https://github.com/vishalbiswas/Splash/blob/master/LICENSE">MIT License</a></string>
    <string name="strAbout">About</string>
    <string name="errPassNoMatch">Passwords do not match!</string>
    <string name="errUserData">Unable to retrieve userdata!</string>
    <string name="strEditThread">Edit Thread</string>
    <string name="strChangeAttach">Change Attachment</string>
    <string name="strCommentFetchFailed">Unable to fetch comments</string>
    <string name="errPost">An error occurred while posting</string>
    <string name="errAttach">An error occurred while uploading attachment</string>
    <string name="strContent">Content</string>
    <string name="strTitle">Title</string>
    <string name="strAttach">Attach File</string>
    <string name="strConfirmPass">Confirm Password</string>
    <string name="strForum">Forum</string>
    <string name="strAuthor">Author</string>
    <string name="strThreadDate">Thread Date</string>
    <string name="strCreated">Created:</string>
    <string name="strModified">Last Modified:</string>
    <string name="strThreadId">Thread ID</string>
    <string name="strComments">Comments</string>
    <string name="strSearch">Search</string>
    <string name="strRefresh">Refresh</string>
    <string name="strLogout">Log out</string>
    <string name="strAlreadyRunning">Already in progress…</string>
    <string name="strAll">All</string>
    <string name="errSelectSearchServer">Please, select a server to search in…</string>
    <string name="errInvalidSession">Invalid Session</string>
    <string name="errCommentNotFound">Specified comment does not exist</string>
    <string name="strNotificationTitle">New action</string>
    <string name="strComentComent" formatted="false">%s replied to your comment in thread %s</string>
    <string name="strCommentThread" formatted="false">%s replied in your thread %s</string>
    <string name="strModerate">Moderate</string>
    <string name="strPermImage">You need to grant this permission to be able to attach files!</string>
    <string name="errBannedLogin">You have been banned</string>
    <string name="errCannotComment">Thread/comment is blocked or you don\'t have sufficient rights</string>
    <string name="errCannotPost">Thread is locked or you don\'t have sufficient rights</string>
    <string name="strUserBanned">This user has been banned</string>
    <string name="strUserRevoked">This user had their rights revoked</string>
    <string name="strMember">Member</string>
    <string name="strModerator">Moderator</string>
    <string name="strAdministrator">Administrator</string>
    <string name="errAlphaNumOnly">Only alphanumeric values are allowed</string>
    <string name="strCommentLocked">Your comment in thread \'%s\' was locked</string>
    <string name="strThreadLocked">You thread \'%s\' was locked</string>
    <string name="strCommentUnlocked">Your comment \'%s\' was unlocked</string>
    <string name="strThreadUnlocked">Your thread \'%s\' was unlocked</string>
    <string name="strCommentUnhidden">Your comment \'%s\' was restored</string>
    <string name="strThreadUnhidden">Your thread \'%s\' was restored</string>
    <string name="strCommentHidden">Your comment \'%s\' was banned</string>
    <string name="strThreadBanned">Your thread \'%s\' was banned</string>
    <string name="strNoServers">No servers configured</string>
</resources>
