<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="general"
        android:title="@string/pref_general">
    <ListPreference
        android:defaultValue="en"
        android:entries="@array/lang_list"
        android:entryValues="@array/lang_list_values"
        android:key="locale"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/strLanguage" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="remember"
        android:summary="@string/strRememberSummary"
        android:title="@string/strRemember" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="remember"
            android:key="autolog"
            android:summary="@string/strAutologSummary"
            android:title="@string/strAutolog" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="sources"
        android:title="@string/strSource">
        <MultiSelectListPreference
            android:defaultValue="@array/arrSourcesNDTVValues"
            android:entries="@array/arrSourcesNDTV"
            android:entryValues="@array/arrSourcesNDTVValues"
            android:key="sourcesNDTV"
            android:title="@string/strSourceNDTV" />
    </PreferenceCategory>
</PreferenceScreen>
