<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:title="@string/strSearch"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/strRefresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/strLogout"
        app:showAsAction="ifRoom|withText"
        android:visible="false" />
    <item
        android:id="@+id/user"
        android:title="View User" />
</menu>