<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vishal.chetan.splash.android.AboutActivity"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@mipmap/ic_news"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/myLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/strMITLicense" />

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myLicense"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strOSL" />

        <TextView
            android:id="@+id/anddownLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strAnddownLicense" />

        <TextView
            android:id="@+id/htmltvLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strHtmltvLicense" />
    </LinearLayout>

</RelativeLayout>
