<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.ddns.vishalbiswas.splash.ProfileActivity">

    <ImageView
        android:id="@+id/imgPic"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/tipProfpic"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/editFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgPic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txtFName"
        android:inputType="textPersonName"
        android:maxLength="50" />

    <EditText
        android:id="@+id/editLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editFName"
        android:ems="10"
        android:hint="@string/txtLName"
        android:inputType="textPersonName"
        android:maxLength="50" />
</RelativeLayout>
