<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vishal.chetan.splash.android.ProfileActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:gravity="center_horizontal|top">

    <ImageView
        android:id="@+id/imgPic"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/tipProfpic"
        android:src="@mipmap/ic_news" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center" />

    <TextView
        android:id="@+id/memberType"
        android:text="@string/strMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:gravity="center" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/thread_info_divider_space" />

    <LinearLayout
        android:id="@+id/layoutNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/FName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Space
            android:layout_height="wrap_content"
            android:layout_width="@dimen/thread_info_divider_space" />

        <TextView
            android:id="@+id/LName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/txtBanned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strUserBanned"
        android:textColor="#d50000"
        android:gravity="center_horizontal"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtRevoked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strUserRevoked"
        android:gravity="center_horizontal"
        android:textColor="#9e9d24"
        android:visibility="gone"/>

</LinearLayout>
